--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" th:href="@{/dist/css/join.css}">
+<link rel="stylesheet" th:href="@{/dist/css/user/join.css}">
 <th:block th:replace="~{header :: setFragment(~{this::content})}">
     <th:block th:fragment="content">
     <div class="container">
@@ -47,7 +47,7 @@
             }
         };
     </script>
-    <script src="/dist/js/login.js"></script>
+    <script src="/dist/js/user/login.js"></script>
     </th:block>
 </th:block>
 </html>
