정온 oauth 로그인창 띄움

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -21,13 +21,13 @@
             <div class="LoginOr">OR</div>
             <div class="SocialLogin">
                 <div class="KakaoLogin">
-                    <a><img th:src="@{/dist/image/kakaoLogin.png}"></a>
+                    <a href="/oauth2/authorization/kakao"><img th:src="@{/dist/image/kakaoLogin.png}"></a>
                 </div>
                 <div class="NaverLogin">
-                    <a><img th:src="@{/dist/image/naverLogin.png}"></a>
+                    <a href="/oauth2/authorization/naver"><img th:src="@{/dist/image/naverLogin.png}"></a>
                 </div>
                 <div class="GoogleLogin">
-                    <a><img th:src="@{/dist/image/googleLogin.jpg}"></a>
+                    <a href="/oauth2/authorization/google"><img th:src="@{/dist/image/googleLogin.jpg}"></a>
                 </div>
             </div>
             <div class="JoinHref">
