--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -35,12 +35,47 @@
                         <div class="voteComment">
                             <span>해당 작품에 대한 별점을 주세요.</span>
                         </div>
-                        <div class="voteStar">
-                            <span>별</span>
-                            <span>별</span>
-                            <span>별</span>
-                            <span>별</span>
-                            <span>별</span>
+                        <div class="rating">
+                            <label class="rating__label rating__label--half" for="starhalf">
+                                <input type="radio" id="starhalf" class="rating__input" name="rating" value="0.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star1">
+                                <input type="radio" id="star1" class="rating__input" name="rating" value="1">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star1half">
+                                <input type="radio" id="star1half" class="rating__input" name="rating" value="1.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star2">
+                                <input type="radio" id="star2" class="rating__input" name="rating" value="2">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star2half">
+                                <input type="radio" id="star2half" class="rating__input" name="rating" value="2.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star3">
+                                <input type="radio" id="star3" class="rating__input" name="rating" value="3">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star3half">
+                                <input type="radio" id="star3half" class="rating__input" name="rating" value="3.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star4">
+                                <input type="radio" id="star4" class="rating__input" name="rating" value="4">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--half" for="star4half">
+                                <input type="radio" id="star4half" class="rating__input" name="rating" value="4.5">
+                                <span class="star-icon"></span>
+                            </label>
+                            <label class="rating__label rating__label--full" for="star5">
+                                <input type="radio" id="star5" class="rating__input" name="rating" value="5">
+                                <span class="star-icon"></span>
+                            </label>
                         </div>
                     </div>
                     <div class="detailComment">
@@ -62,7 +97,9 @@
                 <div class="detail3"></div>
             </div>
         </div>
-        <script th:src="@{/dist/js/movieDetail.js}"></script>
+        <script th:src="@{/dist/js/detail/movieDetail.js}"></script>
+        <script th:src="@{/dist/js/detail/reviewRating.js}"></script>
+
     </th:block>
 
 </th:block>
