--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -90,11 +90,12 @@
                                     <button type="submit">등록</button>
                                 </div>
                             </div>
-
                         </form>
                     </div>
                 </div>
-                <div class="detail3"></div>
+                <div class="detail3">
+                    <div id="userId" th:text="${#authentication.name}"></div>
+                </div>
             </div>
         </div>
         <script th:src="@{/dist/js/detail/movieDetail.js}"></script>
