--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -145,7 +145,19 @@
 </div>
 <script sec:authorize="isAuthenticated()">
     let currentId = `[[${#authentication.name}]]`;
-    let userNickname = `[[${#authentication.getPrincipal().userVO.getEmail()}]]`;
+    let userNickname = `[[${#authentication.getPrincipal().getUser().getNickname()}]]`;
+    console.log(userNickname);
+    document.addEventListener('DOMContentLoaded', function() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const message = urlParams.get('message');
+        if (message) {
+            alert("허용되지 않은 닉네임입니다.\n닉네임을 변경해주세요. ");
+            window.location.href = "/user/myPage";
+        }else if(userNickname.includes("_user")) {
+            alert("허용되지 않은 닉네임입니다.\n닉네임을 변경해주세요. ");
+            window.location.href = "/user/myPage";
+        }
+    });
 </script>
 <script th:src="@{/dist/js/header.js}"></script>
 </body>
