정온 인물디테일(css전)

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -136,7 +136,7 @@
      <div class="inbox2">
          <ul class="conList">
          <li class="searchBox contents2">
-             <input type="search" class="searchInput" placeholder="제목, 인물, 컬렉션으로 검색해보세요.">
+             <input type="text" class="searchInput" placeholder="제목, 인물, 컬렉션으로 검색해보세요.">
              <button type="submit" class="searchBtn"><img th:src="@{/dist/image/search_icon.png}"></button>
          </li>
          <th:block sec:authorize="isAnonymous()">
