정온 오른쪽 헤더

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -71,6 +71,7 @@
         .searchBox{
             line-height: 80px;
             float: left;
+            margin-left:-2px;
         }
         .inbox2 input{
             width: 300px;
