modify sql table & myPage modal css

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -76,8 +76,8 @@
         <span>팔로우한 감독</span>
     </div>
     <div id="modal" class="modal">
+        <button id="modalClose">X</button>
         <div class="modal-content" id="modalContent"></div>
-        <button id="modalClose">Close</button>
     </div>
 </div>
 <script sec:authorize="isAuthenticated()">
