--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<link rel="stylesheet" th:href="@{/dist/css/trendingPeople.css}">
 <th:block th:replace="~{header :: setFragment(~{this::content})}">
     <th:block th:fragment="content">
 <head>
@@ -11,7 +12,7 @@
         .container {
             display: flex;
             flex-wrap: wrap;
-            width: 1400px;
+            width: 1395px;
             margin: 0 auto;
         }
         .nowPlayingMovie ul {
@@ -22,7 +23,6 @@
         }
         .nowPlayingMovie li {
             font-size: 12px;
-            margin-bottom: -29px;
             text-align: left;
         }
         .nowPlayingMovieMain img {
@@ -57,59 +57,75 @@
             border-radius: 10px;
             box-shadow: 1px 2px 6px gray;
         }
-        .nowPlayingMovieMain, .topMovieMain {
+        .nowPlayingMovieMain{
             margin: 10px;
             height: 350px;
             /*background-color: red;*/
             display: table-cell;
             justify-content: space-between;
 
-
         }
         .movie iframe {
             width: 100%;
             height: 200px;
         }
-        .commentOutBox, .movieOutBox{
+        .commentOutBox{
+            width: 1400px;
+            height: 100px;
+            margin: 40px 0 65px;
+        }
+        .movieOutBox{
             width: 1400px;
             height: 50px;
-            /*background-color: antiquewhite;*/
-            margin: 10px 0 250px;
+            /* background-color: antiquewhite; */
+            margin: 135px 0 90px;
             padding-left: 10px;
         }
         .movieOutBox{
             width: 1400px;
             position: relative;
-            height: 400px;
+            height: 410px;
             overflow: hidden;
-            cursor:pointer;
-            /*background-color: aqua;*/
-            padding: 0 20px;
-            line-height: 50px;
+            cursor: pointer;
+            /* background-color: aqua; */
+            padding: 0px 28px;
+            /* line-height: 32px; */
             font-size: 1.2em;
         }
 
         .commentOutBox p{
-            width: 1400px;
-            padding-left: 40px;
+            width: 1380px;
+            font-size: 20px;
         }
         .nowPlayingOutBox p{
-            width: 1400px;
+            width: 1380px;
             padding-left: 40px;
         }
         .commentInBox{
-            width: 1400px;
+            width: 1380px;
             height: 180px;
             display: flex;
             justify-content: space-around;
             padding: 10px;
         }
+
         .comment{
-            width: 420px;
+            padding: 15px;
+            width: 390px;
             height: 100%;
             border-radius: 20px;
             border: 1px solid gainsboro;
         }
+        .mainposter{
+            border-radius: 5px;
+            border: 1px solid gray;
+        }
+        .commentThing {
+            display: block;
+            margin: 16px 0 5px;
+            overflow: hidden;
+        }
+
         #rightBtn{
             width: 50px;
             height: 50px;
@@ -120,8 +136,8 @@
             z-index: 10;
             background-color: white;
             position: absolute;
-            top: 620px;
-            right: 100px;
+            top: 173px;
+            right: 6px;
             cursor: pointer;
             font-size: 20px;
         }
@@ -135,16 +151,21 @@
             z-index: 10;
             background-color: white;
             position: absolute;
-            top: 620px;
-            left: 110px;
+            top: 173px;
+            left: 5px;
             cursor: pointer;
             font-size: 20px;
         }
 
-        .innerContainer, .innerContainer2 {
+        .innerContainer {
             display: flex;
             transition: transform 1s;
             margin: 0 auto;
+        }
+
+        .mainposter{
+            width: 60px;
+            height: 90px;
         }
 
     </style>
@@ -159,6 +180,7 @@
             <div class="comment"></div>
         </div>
     </div>
+
     <div class="movieOutBox" id="movieContainer">
         <p class="movieInBoxTitle">현재 상영작</p>
         <div class="innerContainer"></div>
@@ -166,18 +188,17 @@
         <button type="button" class="btn" id="leftBtn"> < </button>
     </div>
 
-    <div class="movieOutBox"  id="topMovieContainer">
-        <p class="movieInBoxTitle">지금 인기있는 작품</p>
-        <div class="innerContainer2"></div>
-        <button type="button" class="btn" id="rightBtn2"> > </button>
-        <button type="button" class="btn" id="leftBtn2"> < </button>
+    <div class="trendingPeopleBox">
+        <p class="trendingPeopleTitle">화제의 인물</p>
+        <div class="trendingPeopleContainer"></div>
     </div>
     </div>
 
 
 <script th:src="@{/dist/js/goToDetail.js}"></script>
 <script th:src="@{/dist/js/nowPlayingSlide.js}"></script>
-<script th:src="@{/dist/js/topMovieSlide.js}"></script>
+<script th:src="@{/dist/js/randomComment.js}"></script>
+<script th:src="@{/dist/js/trendingPeople.js}"></script>
 <script>
 
 </script>
