add starFollow func

--- a/src/main/resources/templates/movie/person.html
+++ b/src/main/resources/templates/movie/person.html
@@ -9,6 +9,7 @@
             <div class="personMovieInfo"><div class="personMovieList personMediaList">영화</div></div>
             <div class="personTvInfo"><div class="personTvList personMediaList">TV 프로그램</div></div>
         </div>
+        <div th:text="${isFollowed}" style="display: none" id="isFollowed"></div>
     <script th:src="@{/dist/js/detail/personDetail.js}"></script>
     </th:block>
 </th:block>
