modify display star poster css

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -70,11 +70,11 @@
         </div>
     </div>
     <div class="followActor section">
-        <span>팔로우한 배우</span>
+        <span style="font-size: 21px; font-weight: 700">팔로우한 배우</span>
         <div id="actorContainer"></div>
     </div>
     <div class="followDirector section">
-        <span>팔로우한 감독</span>
+        <span style="font-size: 21px; font-weight: 700">팔로우한 감독</span>
         <div id="crewContainer"></div>
     </div>
     <div id="modal" class="modal">
