add getHeartCount func at detail page

--- a/src/main/resources/templates/movie/detail.html
+++ b/src/main/resources/templates/movie/detail.html
@@ -22,9 +22,9 @@
                         </ul>
                     </div>
                     <div class="detailLike">
-                        <button id="detailWish">
+                        <div id="detailWish">
 
-                        </button>
+                        </div>
                         <div id="detailCollection">
                            컬렉션 추가
                         </div>
