정온 테스트

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -193,6 +193,7 @@
     </div>
     <div class="movieOutBox2" id="movieContainer2">
         <p class="movieInBoxTitle">평가가 좋은 작품1</p>
+        <p class="movieInBoxTitle">정온 테스트 코드</p>
         <div class="innerContainer2"></div>
         <button type="button" class="btn" id="rightBtn2"> > </button>
         <button type="button" class="btn" id="leftBtn2"> < </button>
