--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,12 +8,10 @@
             <div class="LoginLogo"></div>
             <form action="/user/login" method="post" class="LoginArea">
                 <div class="LoginInputArea">
-                    <input type="text" name="email" id="LoginEmail" onchange="changeValue()">
-                    <label for="LoginEmail" id="LoginEmailLabel" class="LoginLabel">이메일</label>
+                    <input type="text" name="email" id="LoginEmail" onchange="changeValue()" placeholder="이메일">
                 </div>
                 <div class="LoginInputArea">
-                    <input type="password" name="pw" id="LoginPw" onchange="changeValue()">
-                    <label for="LoginPw" id="LoginPwLabel" class="LoginLabel">비밀번호</label>
+                    <input type="password" name="pw" id="LoginPw" onchange="changeValue()" placeholder="비밀번호">
                 </div>
                 <button type="submit" class="LoginBtn">로그인</button>
             </form>
@@ -47,7 +45,6 @@
             }
         };
     </script>
-    <script src="/dist/js/user/login.js"></script>
     </th:block>
 </th:block>
 </html>
